--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ fastrand = "2.3.0"
 
 [dev-dependencies]
 anathema = { git = "https://github.com/togglebyte/anathema/", rev = "9afde0d73650eed9f4ecf46d4ccab11ecbfb70c7", version = "0.2.0" }
+
+[patch.'https://github.com/togglebyte/anathema/']
+anathema = { git = "https://github.com/museun/anathema", branch = "fix-notify" }
